--- a/DeliveryOriginal/DeliveryOriginal.Mobile/app/src/main/res/layout/activity_login.xml
+++ b/DeliveryOriginal/DeliveryOriginal.Mobile/app/src/main/res/layout/activity_login.xml
@@ -49,6 +49,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
         android:backgroundTint="#CCCCCC"
+        android:maxLines="1"
+        android:maxLength="100"
         android:drawableLeft="@drawable/ic_baseline_account_circle_24"
         android:drawablePadding="19dp"
         android:hint="@string/full_name"
@@ -66,6 +68,8 @@
         android:layout_marginTop="30dp"
         android:backgroundTint="#CCCCCC"
         android:inputType="textPassword"
+        android:maxLines="1"
+        android:maxLength="100"
         android:drawableLeft="@drawable/ic_baseline_vpn_key_24"
         android:drawablePadding="19dp"
         android:hint="@string/password"
