--- a/DeliveryOriginal/DeliveryOriginal.Mobile/app/src/main/res/layout/activity_registration.xml
+++ b/DeliveryOriginal/DeliveryOriginal.Mobile/app/src/main/res/layout/activity_registration.xml
@@ -48,6 +48,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
         android:backgroundTint="#CCCCCC"
+        android:maxLines="1"
+        android:maxLength="100"
         android:drawableLeft="@drawable/ic_baseline_account_circle_24"
         android:drawablePadding="19dp"
         android:hint="@string/login"
@@ -64,6 +66,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
         android:backgroundTint="#CCCCCC"
+        android:maxLines="1"
+        android:maxLength="100"
         android:drawableLeft="@drawable/ic_baseline_account_circle_24"
         android:drawablePadding="19dp"
         android:hint="@string/full_name"
@@ -81,6 +85,8 @@
         android:layout_marginTop="30dp"
         android:backgroundTint="#CCCCCC"
         android:inputType="textPassword"
+        android:maxLines="1"
+        android:maxLength="100"
         android:drawableLeft="@drawable/ic_baseline_vpn_key_24"
         android:drawablePadding="19dp"
         android:hint="@string/password"
@@ -101,6 +107,8 @@
         android:layout_marginTop="30dp"
         android:backgroundTint="#CCCCCC"
         android:inputType="textPassword"
+        android:maxLines="1"
+        android:maxLength="100"
         android:drawableLeft="@drawable/ic_baseline_vpn_key_24"
         android:drawablePadding="19dp"
         android:hint="@string/repeat_password"
