--- a/DeliveryOriginal/DeliveryOriginal.Mobile/app/src/main/res/layout/dish_item.xml
+++ b/DeliveryOriginal/DeliveryOriginal.Mobile/app/src/main/res/layout/dish_item.xml
@@ -32,7 +32,7 @@
             android:id="@+id/dish_name"
             android:layout_width="160dp"
             android:layout_height="40dp"
-            android:text="Category name"
+            android:text="Dish name"
             android:textColor="@color/white"
             android:textSize="16sp"
             android:textStyle="bold"
@@ -40,7 +40,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/dish_image"
-            app:layout_constraintVertical_bias=".15"
+            app:layout_constraintVertical_bias=".1"
             app:layout_constraintHorizontal_bias="0.5"/>
 
         <TextView
