--- a/DeliveryOriginal/DeliveryOriginal.Mobile/app/src/main/res/layout/activity_checkout.xml
+++ b/DeliveryOriginal/DeliveryOriginal.Mobile/app/src/main/res/layout/activity_checkout.xml
@@ -49,6 +49,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
         android:backgroundTint="#CCCCCC"
+        android:maxLines="1"
+        android:maxLength="100"
         android:drawableLeft="@drawable/ic_baseline_local_phone_24"
         android:drawablePadding="19dp"
         android:hint="@string/PhoneNumber"
@@ -65,6 +67,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
         android:backgroundTint="#CCCCCC"
+        android:maxLines="1"
+        android:maxLength="100"
         android:drawableLeft="@drawable/ic_baseline_location_city_24"
         android:drawablePadding="19dp"
         android:hint="@string/city"
@@ -82,6 +86,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
         android:backgroundTint="#CCCCCC"
+        android:maxLines="1"
+        android:maxLength="100"
         android:drawableLeft="@drawable/ic_baseline_location_city_24"
         android:drawablePadding="19dp"
         android:hint="@string/street"
@@ -101,6 +107,8 @@
         android:drawableLeft="@drawable/ic_baseline_location_city_24"
         android:drawablePadding="19dp"
         android:layout_marginTop="30dp"
+        android:maxLines="1"
+        android:maxLength="100"
         android:hint="@string/house"
         android:textColor="@color/white"
         android:textColorHint="@color/white"
@@ -115,6 +123,8 @@
         android:layout_width="140dp"
         android:layout_height="wrap_content"
         android:backgroundTint="#CCCCCC"
+        android:maxLines="1"
+        android:maxLength="100"
         android:drawableLeft="@drawable/ic_baseline_location_city_24"
         android:drawablePadding="19dp"
         android:layout_marginTop="30dp"
