--- a/DeliveryOriginal/DeliveryOriginal.Mobile/app/src/main/res/layout/activity_cook_order_desription.xml
+++ b/DeliveryOriginal/DeliveryOriginal.Mobile/app/src/main/res/layout/activity_cook_order_desription.xml
@@ -4,24 +4,23 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.ui.activity.MainActivity"
-    android:background="@color/mediumGray">
+    android:background="@color/mediumGray"
+    tools:context=".ui.ui.activity.MainActivity">
 
     <TextView
         android:id="@+id/phone_order_description"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintBottom_toTopOf="@+id/recyclerviewCookOrderDescription"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.1"
-        app:layout_constraintHorizontal_bias="0.095"
         android:text="Phone:"
         android:textColor="@color/white"
         android:textSize="14sp"
         android:textStyle="bold"
-        />
+        app:layout_constraintBottom_toTopOf="@+id/recyclerviewCookOrderDescription"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.15"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.1" />
 
     <TextView
         android:id="@+id/address_order_description"
@@ -33,10 +32,10 @@
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/recyclerviewCookOrderDescription"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.1"
+        app:layout_constraintHorizontal_bias="0.15"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/phone_order_description"
-        app:layout_constraintVertical_bias="0.1" />
+        app:layout_constraintVertical_bias="0.08" />
 
     <TextView
         android:id="@+id/customer_order_description"
@@ -46,12 +45,12 @@
         android:textColor="@color/white"
         android:textSize="14sp"
         android:textStyle="bold"
+        app:layout_constraintHorizontal_bias="0.09"
+        app:layout_constraintVertical_bias="0.1"
         app:layout_constraintBottom_toTopOf="@+id/recyclerviewCookOrderDescription"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.1"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/address_order_description"
-        app:layout_constraintVertical_bias="0.1" />
+        app:layout_constraintTop_toBottomOf="@+id/address_order_description" />
 
     <TextView
         android:id="@+id/cost_order_description"
@@ -63,7 +62,7 @@
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/recyclerviewCookOrderDescription"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.092"
+        app:layout_constraintHorizontal_bias="0.08"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/customer_order_description"
         app:layout_constraintVertical_bias="0.1" />
