--- a/DeliveryOriginal/DeliveryOriginal.Mobile/app/src/main/res/layout/fragment_available_delivery_orders.xml
+++ b/DeliveryOriginal/DeliveryOriginal.Mobile/app/src/main/res/layout/fragment_available_delivery_orders.xml
@@ -8,7 +8,7 @@
     tools:context=".ui.ui.activity.CookActivity">
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerviewAvailableCookOrders"
+        android:id="@+id/recyclerviewAvailableOrders"
         android:layout_width="match_parent"
         android:layout_height="540dp"
         app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
@@ -28,11 +28,11 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias=".5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/recyclerviewAvailableCookOrders"
+        app:layout_constraintTop_toBottomOf="@+id/recyclerviewAvailableOrders"
         app:layout_constraintVertical_bias=".1" />
 
     <TextView
-        android:id="@+id/currentCook"
+        android:id="@+id/currentUser"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="1200"
@@ -43,11 +43,11 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias=".5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/recyclerviewAvailableCookOrders"
+        app:layout_constraintTop_toBottomOf="@+id/recyclerviewAvailableOrders"
         app:layout_constraintVertical_bias=".3" />
 
     <com.google.android.material.button.MaterialButton
-        android:id="@+id/cookLogout"
+        android:id="@+id/currentUserLogout"
         android:layout_width="200dp"
         android:layout_height="60dp"
         android:layout_marginTop="10dp"
@@ -56,7 +56,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/currentCook"
+        app:layout_constraintTop_toBottomOf="@+id/currentUser"
         app:layout_constraintVertical_bias="0" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
